--- a/index.html
+++ b/index.html
@@ -4,11 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CDN CSS link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title>Calculation cost and save money</title>
 </head>
 <body>
+    <main class="">
+        <h2 class="text-center">Calculation Money</h2>
+      <div class="container">
+         <div class="row">
+             <div class="col-12 col-md-6">
+                <div class="image-area">
+                    <img class="img-fluid" src="img/img.jpg" alt="">
+                </div>
+             </div>
+             <div class="col-12 col-md-6">
+                <div class="input-area p-5">
+                        <h5 class="text-capitalize text-center mb-3">income</h5>
+                        <div class="d-flex align-items-center justify-content-center">
+                            <h6 class="me-3 text-capitalize">income:</h6>
+                            <input id="income-input" class="bg-gray border-0" type="text">
+                        </div>
+                        <h5 class="text-capitalize text-center m-3">Expenses</h5>
+                        <div class="d-flex align-items-center justify-content-center mb-2">
+                            <h6 class="text-capitalize me-3">Food:</h6>
+                            <input id="food-input" class="bg-gray border-0" type="text">
+                        </div>
+                        <div class="d-flex align-items-center justify-content-center mb-2">
+                            <h6 class="text-capitalize me-3">Rent:</h6>
+                            <input id="rent-input" class="bg-gray border-0" type="text">
+                        </div>
+                        <div class="d-flex align-items-center justify-content-center">
+                            <h6 class="text-capitalize">Clothes:</h6>
+                            <input id="clothes-input" class="bg-gray border-0" type="text">
+                        </div>
+                        <div class="text-center">
+                            <button id="calculate">Calculate</button>
+                            <p>Total Expenses: <span id="total-expense">5500</span></p>
+                            <p>Balance: <span id="balance"></span>4500</p>
+                        </div>
+
+                        <div class="save-area">
+                            <div class="d-flex align-items-start ">
+                                <p>Save: </p> <input type="text" class="bg-gray border-0 w-25">
+                            </div>
+                        </div>
+                    
+                </div>
+             </div>
+         </div>
+      </div>
+    </main>
     
+    <!-- Bootstrap CDN JS link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Custom JS -->
     <script src="js/app.js"></script>
 </body>
 </html>
