--- a/index.html
+++ b/index.html
@@ -12,53 +12,18 @@
 </head>
 <body>
     <main class="p-5">
-        <h2 class="text-center mb-md-5">Calculation Money</h2>
+        <h2 class="text-center mb-md-5 teal">Calculation Money</h2>
       <div class="container">
          <div class="row">
              <div class="col-12 col-md-6">
+                 <!-- Image Area -->
                 <div class="image-area">
-                    <img class="img-fluid" src="img/img.jpg" alt="">
+                    <img class="img-fluid" src="img/img2.jpg" alt="">
                 </div>
              </div>
+             <!-- Input Area -->
              <div class="col-12 col-md-6">
-                <div class="input-area p-5">
-                        <!-- <h5 class="text-capitalize text-center mb-3">income</h5>
-                        <div class="d-flex align-items-center justify-content-center">
-                            <h6 class="me-3 text-capitalize">income:</h6>
-                            <input id="income-input"type="text">
-                        </div>
-                        <h5 class="text-capitalize text-center m-3">Expenses</h5>
-                        <div class="d-flex align-items-center justify-content-center mb-2">
-                            <h6 class="text-capitalize me-3">Food:</h6>
-                            <input id="food-input"type="text">
-                        </div>
-                        <div class="d-flex align-items-center justify-content-center mb-2">
-                            <h6 class="text-capitalize me-3">Rent:</h6>
-                            <input id="rent-input"type="text">
-                        </div>
-                        <div class="d-flex align-items-center justify-content-center">
-                            <h6 class="text-capitalize">Clothes:</h6>
-                            <input id="clothes-input"type="text">
-                        </div>
-                        <div class="text-center">
-                            <button id="calculate-button">Calculate</button>
-                            <p>Total Expenses: <span id="total-expense">00</span></p>
-                            <p>Balance: <span id="balance">00</span></p>
-                        </div> -->
-
-                        <!-- <div class="save-area">
-                            <div class="d-flex ">
-                                <p class="mt-3">Save: <input type="text" value="10" disabled class="ms-2 text-center"></p>
-                            </div>
-                            <div>
-                                <span class="ms-4">%</span>
-                                <button class="ms-4 border border-rounded px-5 py-2 save-button">Save</button>
-                            </div>
-                        </div> -->
-                       
-
-                       <!-- <p>Food: <input id="clothes-input"type="text"></p> -->
-
+                <div class="input-area p-5 pb-3">
                        <div class="row g-3 align-items-center justify-content-center">
                         <h5 class="text-capitalize text-center">income</h5>
                         <div class="col-sm-12 col-md-3 text-md-end">
@@ -107,9 +72,6 @@
                             <div class="col">
                                 <span class="ms-md-3"> % </span>
                                 <button id="save-button" class="save-button">Save</button>
-                              <!-- <span id="save" class="form-text">
-                                Save
-                              </span> -->
                             </div>
                         </div>
                       </div>
